# bookstore

./: Dockerfile  README.md  docker-compose.yml  env.dev  fly.toml  heroku.yml  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
